--- a/src/App.css
+++ b/src/App.css
@@ -499,12 +499,12 @@ body,
       display: flex;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      min-height: 75vh;
     }
     .wrapper{
       width: 100%;
       max-width: 500px;
-      padding: 30px 30px;
+      padding: 15px 15px;
       background: #4c94cf;
       border-radius: 20px;
       box-shadow: 0 4px 4px rgba(0,0,0,0.4);
@@ -620,4 +620,37 @@ body,
     }
     .chatbot-toggler span:last-child{
       opacity: 0;
+    }
+    .chat-container {
+      position: fixed;
+      bottom: 0;
+      right: 0;
+      margin: 20px;
+    }
+    
+    .hide {
+      display: none;
+    }
+    .chat-icon {
+      cursor: pointer;
+      position: fixed;
+      bottom: 20px; /* Adjust as needed */
+      right: 20px; /* Adjust as needed */
+      z-index: 1000; /* Ensure it's above other content */
+    }
+    
+    .close-btn {
+      font-size: 20px; /* Adjust size as needed */
+      position: fixed;
+      bottom: 10px; /* Positioned slightly above the chatbox */
+      right: 35px; /* Adjust to make it visually connected to the toggler */
+      z-index: 1002; /* Ensure it's above the toggler */
+    }
+    
+    .App1 {
+      position: fixed;
+      bottom: 12px;
+      right: 20px;
+      z-index: 1001; /* Ensure proper layering */
+      /* Adjust dimensions as needed */
     }
