--- a/src/App.css
+++ b/src/App.css
@@ -501,6 +501,12 @@ body,
       justify-content: center;
       min-height: 80vh;
     }
+    .App2{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 80vh;
+    }
     .wrapper{
       width: 100%;
       max-width: 500px;
