--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body,
   font-family: "Source Sans Pro", sans-serif;
   display: flex;
   position: relative;
-  min-height: 100vh; /* Ensure it covers the full height of the viewport */
+  min-height: 100vh; 
   width: 100%; 
 }
 .app {
@@ -496,6 +496,12 @@ body,
       pointer-events: auto;
     }
     .App1{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 80vh;
+    }
+    .App2{
       display: flex;
       align-items: center;
       justify-content: center;
